# data-project-base

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .terraform-docs.yml  README.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
data_pipeline/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  run_local.py  run_local_example.py  serverless.yml
data_pipeline/config/: development.yml  production.yml
data_pipeline/functions/: process_sales_data.py  sample_function.py
data_pipeline/helpers/: datacleaning.py  versinfo.ipynb
data_pipeline/notebooks/: 2023-12-31-testbotebook.ipynb  2024-03-16-path-manipulation-example.ipynb  2024-2-21- Data Transform.ipynb  sample-great-expectations.ipynb  sample-notebook.ipynb
data_visualization/: Makefile  README.md  pyproject.toml  streamlit_app.py
data_visualization/src/: data_loader.py
infrastructure/remotestate/: main.tf
infrastructure/remotestate/development/: README.md  main.tf  provider.tf
infrastructure/tf/: provider.tf  s3.tf
infrastructure/tf/environments/development/: Makefile  locals.tf  main.tf  provider.tf
infrastructure/tf/environments/production/: locals.tf  provider.tf
infrastructure/tf/modules/: README.md  athena.tf  ecr.tf  glue_catalog.tf  s3.tf  variables.tf
